apps/metallb.config.yml
# Give sufficient rights to MetalLB namespace
apiVersion: v1
kind: Namespace

metadata:
  name: metallb-system
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
