apps/whoami.yml
apiVersion: v1
kind: Namespace

metadata:
  name: k8s-app

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: whoami
  labels:
    app: whoami
  namespace: k8s-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: "300m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
# Load balancer
apiVersion: v1
kind: Service

metadata:
  name: whoami
  namespace: k8s-app

spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
