apps/envoy.config.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-config
    namespace: envoy-gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"

spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # All namespaces are allowed to use this Gateway
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: brot-certificate
      allowedRoutes:
        namespaces:
          from: All

---
# Redirect HTTP to HTTPS
# for brot.epy.ovh and *.brot.epy.ovh
apiVersion: gateway.networking.k8s.io/v1

kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: envoy-gateway-system

spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - "brot.epy.ovh"
    - "*.brot.epy.ovh"

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
