apps/whoami2.app.yml
apiVersion: v1
kind: Namespace

metadata:
  name: k8s-app2

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: whoami2
  labels:
    app: whoami2
  namespace: k8s-app2

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami2
  template:
    metadata:
      labels:
        app: whoami2
    spec:
      containers:
        - name: whoami2
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: "300m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service

metadata:
  name: whoami2
  namespace: k8s-app2

spec:
  selector:
    app: whoami2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: whoami2
  namespace: k8s-app2

spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - "whoami2.brot.epy.ovh"

  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: whoami2
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
