apps/network-policies.yml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy

metadata:
  name: allow-envoy-to-selected-pods

spec:
  description: "Allow Envoy Gateway to reach pods labeled security-gateway-accessible=true"
  endpointSelector:
    matchLabels:
      security-gateway-accessible: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns
specs:
- description: "* -> kube-dns:53/udp,tcp"
  endpointSelector: {}
  enableDefaultDeny:
    egress: false
    ingress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-traffic-policy
  namespace: argocd
specs:
- description: "envoy-gateway -> argocd-server:8080/tcp"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
- description: "argocd-server -> argocd-redis:6379/tcp"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
- description: "argocd-server -> kube-apiserver:6443/tcp"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
- description: "argocd-server -> argocd-repo-server:8081/tcp"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
